--- a/index.html
+++ b/index.html
@@ -357,20 +357,20 @@ nav a:focus {
 /* --- Add only this --- */
 @media (max-width: 768px) {
   .slider {
-    display: flex;              /* flexbox only on phones */
+    display: block;              /* flexbox only on phones */
     justify-content: center;    /* center horizontally */
-    align-items: center;        /* center vertically if you want */
+    align-items: left;        /* center vertically if you want */
     text-align: center;         /* center text inside */
-      margin-left: 1rem;
+      margin-left: 5%;
 
   }
 
   .slide-text {
     width: 100%;                /* span full width so text-align works */
     text-align: center;          /* center text */
-    display: flex;               /* helps center emoji + text */
+    display: block;               /* helps center emoji + text */
     justify-content: center;
-          margin-left: 5rem;
+    margin-left: 0,auto;
 
 
   }
