Improve website with sliding testimonials, light theme fixes, and mobile optimization
- Add sliding testimonials carousel with right-to-left animation
- Fix light theme styling with better contrast and professional appearance
- Implement mobile optimization for employers and contact sections
- Update text colors to white for better visibility
- Add responsive design breakpoints for all screen sizes
- Fix theme toggle functionality and script loading order

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 
   <!-- JavaScript Files -->
   <script src="js/wishlist.js"></script>
-  <script src="js/theme.js"></script>
   <script src="js/vanta.js"></script>
 
   <!-- Three.js & Vanta.js for ambient background -->
@@ -107,7 +106,14 @@
     }
 
     // Load components when DOM is ready
-    document.addEventListener('DOMContentLoaded', loadComponents);
+    document.addEventListener('DOMContentLoaded', async () => {
+      await loadComponents();
+      
+      // Load theme functionality after components are loaded
+      const script = document.createElement('script');
+      script.src = 'js/theme.js';
+      document.body.appendChild(script);
+    });
   </script>
 
 </body>
