--- a/careers.html
+++ b/careers.html
@@ -1582,7 +1582,7 @@
           category: job.category || 'Other',
           requirements: job.requirements ? String(job.requirements).split(';').map(r => r.trim()).filter(Boolean) : [],
           postedDate: job.postedDate || '',
-          status: job.status || 'active',
+          status: job.status || 'closed',
         })) : [];
 
         populateFilters();
